# BallsDex-AntiFarm-Pack

./: README.md  pyproject.toml
antifarm/: apps.py
antifarm/package/: __init__.py  cog.py
