[project]
name = "antifarm"
version = "0.0.1"

description = "AntiFarm package for BallsDex"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "hiboman", email = "hiboman@proton.me" },
]
readme = "README.md"

# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/MapsDex-Team/BallsDex-AntiFarm-Pack"
Documentation = "https://github.com/MapsDex-Team/BallsDex-AntiFarm-Pack#readme"
Issues = "https://github.com/MapsDex-Team/BallsDex-AntiFarm-Pack/issues"